Velocity: clarify hints

--- a/src/badweathermounttester/templates/index.html
+++ b/src/badweathermounttester/templates/index.html
@@ -869,9 +869,10 @@
                 <ol>
                     <li>{{ _('Three vertical stripes are now displayed on the simulator screen.') }}</li>
                     <li>{{ _('Select a stripe below (Left, Middle, or Right).') }}</li>
-                    <li>{{ _('Move the mount until the star is about to enter the stripe.') }}</li>
+                    <li>{{ _('Choose a very short exposure for the camera. At best avoid saturation.') }}</li>
+                    <li>{{ _('Move the mount until the star is about to enter the stripe and enable tracking in the mount.') }}</li>
                     <li>{{ _('Press Start when the star enters the stripe, Stop when it exits.') }}</li>
-                    <li>{{ _('Record the time for each stripe to validate the calculated velocity.') }}</li>
+                    <li>{{ _('Record the time for each stripe to measure on screen velocity.') }}</li>
                 </ol>
                 <p>{{ _('This step verifies that the mount moves at the expected sidereal rate.') }}</p>
             </div>
